added initial css formatting

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <!-- The div that holds our map -->
-  <div id="mapid"></div>
+  <div id="map"></div>
 
   <!-- Leaflet JavaScript -->
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
